# fmpl

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEMO.md  DEV.md  FIXES.md  LICENSE  PROMPT.md  PROMPT.md.old  PROMPT2.md  README.md  TUTORIAL.md  cargo-browser.py  cargo-summary.py  fmpl.ebnf  justfile  objfs.toml  project.md  ralph-analyze.py  ralph-compact.py  ralph.oc.yml  ralph.sh  ralph.yml  test-compaction-detection.fmpl
.agent/: AGENTS.md  (+4 more)
benches/: Cargo.toml  cross_compile_bench.rs  fmpl_only.rs  quick_comparison.rs  simple_comparison.rs  vm_comparison.rs
fmpl-core/: Cargo.toml  build.rs  build.rs.tmp  test_fold_parse.txt
fmpl-core/.agent/: events.jsonl
fmpl-core/ast-grep-rules/: pattern-match-migration.yml  pattern-migration.yml
fmpl-core/src/: ast.rs  compiler.rs  cross_compile.rs  debug.rs  error.rs  ir_builder.rs  lexer.rs  lib.rs  macros.rs  object.rs  parse_stream.rs  parser.rs  parser_epoch.rs  repr.rs  stream.rs  types.rs  value.rs  value_to_ast.rs  vm.rs
fmpl-core/tests/: ac7_optimizer_pass_through.rs  anonymous_patterns.rs  apply_operator.rs  assignment.rs  ast_optimizer_unit.rs  ast_to_ir_parity.rs  async_curl.rs  backtracking.rs  bootstrap_determinism.rs  bytecode_persistence.rs  bytecode_rules.rs  canonical_pipeline_parity.rs  constructor_invocation.rs  context_aware_compilation.rs  core_prelude.rs  cursor_cow.rs  diagnostics_fmpl_source_scan.rs  exceptions.rs  fmpl_interpreter.rs  fmpl_pipeline_compiler.rs  fold_map_keywords.rs  for_loop.rs  generated_parser_compiles.rs  generated_parser_correctness.rs  grammar_optimizer.rs  lambda_closures.rs  metaprogramming.rs  no_legacy_fmpl_syntax.baseline.json  no_legacy_fmpl_syntax.rs  object_methods.rs  object_persistence.rs  opcode_rename_evidence.rs  optimizer_integration.rs  parse_state_persistence.rs  parser_equivalence.rs  pattern_matching_match.rs  pattern_unification.rs  persistence_envelope_invariant.rs  persistence_schema_anti_rot.rs  rand_builtin.rs  (+24 more)
fmpl-llm/: Cargo.toml
fmpl-llm/src/: error.rs  lib.rs  provider.rs
fmpl-tui/: Cargo.toml  README.md  test-multiline.fmpl
(+264 files in other folders)
