[package]
name = "fmpl-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FMPL language core: lexer, parser, compiler, and VM"

[dependencies]
logos = { workspace = true }
thiserror = { workspace = true }
smol_str = { workspace = true }
serde = { workspace = true }
rkyv = { workspace = true }
tokio = { version = "1", features = ["sync", "rt"] }
curl = "0.4"

[dev-dependencies]
pretty_assertions = "1.4"
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
