[package]
name = "fmpl-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM provider abstraction for FMPL (Ollama, Anthropic)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = { workspace = true }
futures = "0.3"
