[package]
name = "fmpl-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fmpl-core = { path = "../fmpl-core" }
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
smol_str = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
